Updated to 1.4.2 (Snapshot 25w20a)
- This update is for snapshots only, every update of noConsoleSpam is now (major ncs update).(majorminecraftupdate).(snapshot) in versioning